# automage-agent-customization

客制化/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  run.py
客制化/agents/: openai.yaml
客制化/automage_agents/: __init__.py
客制化/configs/: automage.docker.toml  automage.example.toml  feishu_knowledge.example.toml  feishu_knowledge.toml  hermes.example.toml  hermes.local.toml  openclaw.example.toml  optimized.example.toml
客制化/delivery/: database-skill-delivery-zh.md
客制化/docs/: ADVANCED_OPTIMIZATION_GUIDE.md  INTEGRATION_SUMMARY.md  OPTIMIZATION_GUIDE.md  docker_deploy_guide_zh.md  frontend_integration_guide.md  openclaw_integration_guide.md  staff_daily_report_mapping.md
客制化/examples/: integration_demo.py  user.executive.example.toml  user.executive.local.example.toml  user.executive.local.toml  user.manager.example.toml  user.manager.local.example.toml  user.manager.local.toml  user.staff.example.toml  user.staff.local.example.toml  user.staff.local.toml
客制化/references/: database_skill_alignment.md  feishu_knowledge_base.md  hermes_openclaw_runtime.md  hwt_m2_0506_0509_completion_matrix.md  hwt_m2_real_backend_integration_plan.md  landing_page_p0_p1_p2.md  local_architecture_kb.md  milestone2_0506_acceptance.md  milestone2_issue_log.md  onboarding_information_completion_min_flow.md  source_of_truth.md  yang_mock_skill_field_alignment.md
客制化/scripts/: agent_prompt_preview.py  agent_runtime_context.py  check_database_connection.py  check_postgres.py  check_yang_skill_field_alignment.py  db_demo.py  demo_mock_flow.py  init_db.py  (+30 more)
(+790 files in other folders)
