[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automage-agents"
version = "0.1.0"
description = "AutoMage-2 Hermes/OpenClaw-ready agent skeleton"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "jsonschema>=4.0.0",
    "lark-oapi>=1.4.0",
    "psycopg[binary]>=3.2.0,<4.0",
    "redis>=5.0,<6.0",
    "SQLAlchemy>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
]

[tool.setuptools.packages.find]
include = ["automage_agents*"]
exclude = ["agents*", "configs*", "references*", "scripts*", "examples*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
include-package-data = true
